--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.12",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
