--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.12",
-    "next": "14.0.2",
+    "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-pro-sidebar": "^1.1.0-alpha.1"
