--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "bootstrap": "^5.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^10.16.12",
     "next": "^14.2.1",
     "react": "^18",
