--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "bootstrap": "^5.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^10.16.12",
+    "lucide-react": "^0.395.0",
     "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-pro-sidebar": "^1.1.0-alpha.1"
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
