--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "bootstrap": "^5.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^10.16.12",
     "lucide-react": "^0.395.0",
     "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-pro-sidebar": "^1.1.0-alpha.1",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
